# CloudBreachGraph

./: .gitignore  README.md  pyproject.toml
docs/: 01_overview.md  02_architecture.md  03_phase_plan.md  04_conventions.md  05_roadmap.md  README.md
docs/examples/: cloudbreachgraph.example.toml  example-graph.json
docs/learnings/: README.md  learnings_2026-07-20_eni-ip-labels.md  learnings_2026-07-21_anonymize-graph.md  learnings_2026-07-21_example-graph.md  learnings_2026-07-21_html-force-layout.md  learnings_2026-07-21_no-ring-circles.md  learnings_2026-07-21_recompute-from-current.md  learnings_2026-07-21_recompute-layout-button.md  learnings_2026-07-21_ring-optimize-passes.md  learnings_2026-07-21_ringed-html.md  learnings_2026-07-22_eni-ownership-nat-gateways.md  learnings_2026-07-22_eni-reachability-mapping.md  learnings_2026-07-22_label-overlap-minimization.md  learnings_2026-07-22_optional-security-groups.md  learnings_2026-07-22_overlap-free-layout.md  learnings_2026-07-22_routable-reachability.md  learnings_2026-07-22_split-graph-by-vpc.md  learnings_2026-07-22_unify-optimize-passes-main-cli.md  learnings_2026-07-24_vpc-logs-ip-history.md  learnings_phase1.md  learnings_phase2.md  learnings_phase3.md
docs/prompts/: new_change.md  phase1_foundation_collection.md  phase2_modeling_graph.md  phase3_output_cli.md
src/cloudbreachgraph/: __init__.py  cli.py  (+5 more)
tests/: conftest.py  test_anonymize.py  test_builder.py  test_cli.py  test_collectors.py  test_config.py  test_convert.py  test_flowlogs.py  test_graph.py  test_output.py  test_resources.py  test_runner.py
(+30 files in other folders)
